--- a/WCSTrainer/Pages/Skills/Category/Delete.cshtml
+++ b/WCSTrainer/Pages/Skills/Category/Delete.cshtml
@@ -6,15 +6,15 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Category #@Model.SkillCategory.Id</p>
+            <p class="title">Category #@Model.Category.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
-                  <p class="info">@Model.SkillCategory.Name</p>
+                  <p class="info">@Model.Category.Name</p>
                </div>
                <br />
                <form method="post" class="form-group">
-                  <input hidden asp-for="SkillCategory.Id" />
+                  <input hidden asp-for="Category.Id" />
                   <input type="submit" value="Delete" class="btn bg-btn btnRed" />
                </form>
             </div>
