--- a/WCSTrainer/Pages/Lessons/Index.cshtml
+++ b/WCSTrainer/Pages/Lessons/Index.cshtml
@@ -33,7 +33,10 @@
                      <div class="category-title">
                         <p>@category.Name</p>
                         @if (isOwner) {
-                           <a asp-page="DeleteCategory" asp-route-id="@category.Id" class="btn bg-btn btnRed">Delete</a>
+                           <div>
+                              <a asp-page="./Category/Edit" asp-route-id="@category.Id" class="btn bg-btn btnGreen">Edit</a>
+                              <a asp-page="./Category/Delete" asp-route-id="@category.Id" class="btn bg-btn btnRed">Delete</a>
+                           </div>
                         }
                      </div>
                      <ul class="skill-list">
@@ -56,7 +59,7 @@
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn nbg-btn btnMenu">Create Lesson</a>
-                  <a asp-page="CreateCategory" class="btn nbg-btn btnMenu">Create Category</a>
+                  <a asp-page="./Category/Create" class="btn nbg-btn btnMenu">Create Category</a>
                </div>
             </div>
          </div>
