--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -30,8 +30,7 @@
                </form>
             </div>
             <ul class="category-container">
-               @foreach (var category in Model.CategoryList)
-               {
+               @foreach (var category in Model.CategoryList) {
                   <li id="@category.Name @category.Id" class="category">
                      <div class="category-title">
                         <p>@category.Name</p>
@@ -43,8 +42,7 @@
                         }
                      </div>
                      <ul class="skill-list">
-                        @foreach (var lesson in category.Locations)
-                        {
+                        @foreach (var lesson in category.Locations) {
                            <li id="@lesson.Name @lesson.Id" class="skill">
                               <a asp-page="./Details" asp-route-id="@lesson.Id">#@lesson.Id - @lesson.Name</a>
                            </li>
