--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -56,21 +56,16 @@
                               <tr>
                                  <td class="column">
                                     <div class="pills-container">
-                                       @foreach (var person in Model.Skill.Employees)
-                                       {
+                                       @foreach (var person in Model.Skill.Employees) {
                                           bool isActive = false;
-                                          foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee)
-                                          {
-                                             if (orderAsTrainee.ParentSkillId == Model.Skill.Id)
-                                             {
-                                                if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving")
-                                                {
+                                          foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee) {
+                                             if (orderAsTrainee.ParentSkillId == Model.Skill.Id) {
+                                                if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving") {
                                                    isActive = true;
                                                 }
                                              }
                                           }
-                                          if (isActive)
-                                          {
+                                          if (isActive) {
                                              <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
                                           }
                                        }
@@ -109,14 +104,11 @@
             <div class="btn-container">
                <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Skill.Id">Edit Skill</a>
                <a class="btn bg-btn btnBlue" asp-page="./Assign" asp-route-id="@Model.Skill.Id">Assign</a>
-               @if (SignInManager.IsSignedIn(User))
-               {
+               @if (SignInManager.IsSignedIn(User)) {
                   var user = await UserManager.GetUserAsync(User);
-                  if (user != null)
-                  {
+                  if (user != null) {
                      var isOwner = await UserManager.IsInRoleAsync(user, "owner");
-                     if (isOwner)
-                     {
+                     if (isOwner) {
                         <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.Skill.Id">Delete</a>
                      }
                   }
