--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -29,11 +29,14 @@
                   </div>
                   <div class="form-group">
                      <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Lesson</p>
-                           <span asp-validation-for="@Model.SelectedLessonList" class="text-danger"></span>
+                        <div class="multi-select-wrapper">
+                           <p class="label">Lesson</p>
+                           <select asp-for="@Model.SelectedLessonList" multiple class="multi-select-comp" size="@Model.Lessons.Count()">
+                              @foreach (var lesson in Model.Lessons) {
+                                 <option value="@lesson.Id">@lesson.Name</option>
+                              }
+                           </select>
                         </div>
-                        <select asp-for="@Model.SelectedLessonList" multiple class="multi-select" asp-items="@Model.LessonSelectList"></select>
                      </div>
                   </div>
                   <div class="form-group">
@@ -54,3 +57,5 @@
       </div>
    </div>
 </div>
+
+<script src="~/js/pillMenu.js"></script>
