--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -13,7 +13,6 @@
             <div id="contentToPrint" class="print-block">
                <p class="title">Skill #@Model.Skill.Id</p>
                <div class="field-container">
-
                   <div class="field-section-container">
                      <div class="field-section">
                         <div class="title-row">
@@ -32,8 +31,7 @@
                               <td class="label">Included Lessons</td>
                               <td class="text">
                                  <div class="pills-container">
-                                    @foreach (var lesson in Model.Skill.Lessons)
-                                    {
+                                    @foreach (var lesson in Model.Skill.Lessons) {
                                        <a href="/Lessons/Details?id=@lesson.Id" class="pill">@lesson.Name</a>
                                     }
                                  </div>
@@ -73,21 +71,16 @@
                                  </td>
                                  <td class="column">
                                     <div class="pills-container">
-                                       @foreach (var person in Model.Skill.Employees)
-                                       {
+                                       @foreach (var person in Model.Skill.Employees) {
                                           bool isActive = false;
-                                          foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee)
-                                          {
-                                             if (orderAsTrainee.ParentSkillId == Model.Skill.Id)
-                                             {
-                                                if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving")
-                                                {
+                                          foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee) {
+                                             if (orderAsTrainee.ParentSkillId == Model.Skill.Id) {
+                                                if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving") {
                                                    isActive = true;
                                                 }
                                              }
                                           }
-                                          if (!isActive)
-                                          {
+                                          if (!isActive) {
                                              <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
                                           }
                                        }
