--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -56,6 +56,10 @@
                      </div>
                   </div>
 
+                  <p>Temporary Naming Conventions:</p>
+                  <p>H:\Videos\ (Lesson Path) \story.html</p>
+                  <p>D:\Videos\ (Power Point Path) \FileName.pptx</p>
+
                   <div class="form-group">
                      <div class="btn-container">
                         <input type="submit" value="Create" class="btn bg-btn btnGreen" />
