Lesson Edit Back Online

--- a/WCSTrainer/Pages/FileExplorer/Index.cshtml
+++ b/WCSTrainer/Pages/FileExplorer/Index.cshtml
@@ -5,16 +5,13 @@
 @using System.IO
 
 @functions {
-   public List<string> GetSharedFilePaths()
-   {
+   public List<string> GetSharedFilePaths() {
       var sharedFolderPath = System.IO.Path.Combine(Directory.GetCurrentDirectory(), "wwwroot", "Shared");
       var filePaths = new List<string>();
 
-      if (Directory.Exists(sharedFolderPath))
-      {
+      if (Directory.Exists(sharedFolderPath)) {
          var files = Directory.GetFiles(sharedFolderPath, "*.*", SearchOption.AllDirectories);
-         foreach (var file in files)
-         {
+         foreach (var file in files) {
             var webPath = ConvertToWebPath(file, System.IO.Path.Combine(Directory.GetCurrentDirectory(), "wwwroot"), "");
             filePaths.Add(webPath);
          }
@@ -23,8 +20,7 @@
       return filePaths;
    }
 
-   private string ConvertToWebPath(string filePath, string rootPath, string webPrefix)
-   {
+   private string ConvertToWebPath(string filePath, string rootPath, string webPrefix) {
       return filePath.Replace("\\", "/").Replace(rootPath.Replace("\\", "/"), webPrefix);
    }
 }
@@ -34,8 +30,7 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <ul class="file-explorer">
-            @foreach (var filePath in GetSharedFilePaths())
-            {
+            @foreach (var filePath in GetSharedFilePaths()) {
                <li>@filePath</li>
             }
          </ul>
