--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -18,6 +18,9 @@
                         </div>
                         <input asp-for="Lesson.Name" class="form-control" />
                      </div>
+                  </div>
+
+                  <div class="form-group">
                      <div class="form">
                         <div class="labels">
                            <label class="control-label">Lesson Category</label>
