--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -46,7 +46,15 @@
                         </select>
                      </div>
                   </div>
-
+                  <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <label asp-for="Employee.LastName" class="control-label"></label>
+                           <span asp-validation-for="Employee.LastName" class="text-danger"></span>
+                        </div>
+                        <input asp-for="Employee.LastName" class="form-control" />
+                     </div>
+                  </div>
                   <div class="form-group">
                      <input type="submit" value="Save" class="btn bg-btn btnGreen" />
                   </div>
