--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -49,10 +49,10 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
-                           <label asp-for="Employee.LastName" class="control-label"></label>
-                           <span asp-validation-for="Employee.LastName" class="text-danger"></span>
+                           <p class="control-label">Departments</p>
+                           <span asp-validation-for="Employee.TrainerDepartments" class="text-danger"></span>
                         </div>
-                        <input asp-for="Employee.LastName" class="form-control" />
+                        <select asp-for="Employee.TrainerDepartments" multiple class="multi-select" asp-items="Model.Departments"></select>
                      </div>
                   </div>
                   <div class="form-group">
