--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -82,15 +82,15 @@
       <div id="info-container" class="info-container">
          <p id="name" class="title"></p>
          <div class="info">
-            <p class="one">Employee ID</p>
+            <p class="one">Employee ID:</p>
             <p id="employeeId" class="two"></p>
          </div>
          <div class="info">
-            <p class="one">Status</p>
+            <p class="one">Status:</p>
             <p id="status" class="two"></p>
          </div>
          <div class="info">
-            <p class="one">Department</p>
+            <p class="one">Departments:</p>
             <p id="department" class="two"></p>
          </div>
          <div class="btn-container">
